# Scholr

./: .env.example  .gitignore  LICENSE  README.md  api.py  cli.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/: settings.json
scholr/: cli.py  compression.py  coverage.py  decomposer.py  expansion.py  llm.py  orchestrator.py  pipeline.py  planner.py  retrieval.py  session.py  state.py  synthesis.py
tests/: conftest.py  test_compression.py  test_coverage.py  test_decomposer.py  test_e2e.py  test_expansion.py  test_llm.py  test_orchestrator.py  test_pipeline.py  test_planner.py  test_retrieval.py  test_session.py  test_state.py  test_synthesis.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/api/auth/register/: route.ts
web/app/api/conversations/: route.ts
web/app/api/conversations/[id]/: route.ts
web/app/api/conversations/[id]/share/: route.ts
web/app/api/query-limit/: route.ts
web/app/api/research/: route.ts
web/app/api/share/[token]/: route.ts
web/app/api/waitlist/: route.ts
web/app/share/[token]/: page.tsx
web/components/: AuthGate.tsx  CitationModal.tsx  CitePill.tsx  Composer.tsx  EvidencePanel.tsx  ShareViewer.tsx  Sidebar.tsx  SourceCard.tsx  Thread.tsx  UpgradeModal.tsx
web/lib/: auth.ts  bibtex.ts  db.ts
web/types/: scholr.ts
