[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scholr*"]

[project]
name = "scholr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pyfiglet>=1.0.2",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
scholr = "scholr.cli:sync_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests that hit real APIs (deselect with -m 'not e2e')"]
